--- a/ui/html/register.html
+++ b/ui/html/register.html
@@ -32,7 +32,7 @@
                         <div class="form-group label--floating"><input type="email" name="email"><label>이메일(아이디)</label>
                         </div>
                         <div class="form-group label--floating with-addon addon--right"><span> <i
-                                class="fa fa-eye-slash"></i></span><input type="password" name="password"><label>비밀번호(8자리 이상)</label>
+                                class="fa fa-eye-slash"></i></span><input type="password" name="password"><label>비밀번호(8~16글자, 특수문자, 영문자 포함)</label>
                         </div>
                         <div class="form-group label--floating with-addon addon--right"><span> <i
                                 class="fa fa-eye-slash"></i></span><input type="password" name="password_check"><label>비밀번호 확인</label></div>
