훈련대상 API - import, export

--- a/ui/html/dashboard/project-detail.html
+++ b/ui/html/dashboard/project-detail.html
@@ -421,6 +421,9 @@
 <script src="../public/js/main.js"></script>
 <script src="../public/js/demo.js"></script>
 <script src="../public/js/script.js"></script>
+<script>
+    GetDashBoard();
+</script>
 <!--<script type="text/javascript">-->
 <!--    $(document).ready(function () {-->
 <!--        $(".sidebar").load("../navigation.html");-->
