--- a/ui/html/project/project-making.html
+++ b/ui/html/project/project-making.html
@@ -599,6 +599,9 @@
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 <script src="../public/js/jquery.serialize-object.min.js"></script>
 <script src="../public/js/lib/Sortable.min.js"></script>
+<script>
+    GetDashBoard();
+</script>
 </body>
 
 </html>
