--- a/ui/html/register.html
+++ b/ui/html/register.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Roboto">
     <link rel="stylesheet" href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./public/css/sport.css" type="text/css">
+    <link rel="stylesheet" href="/css/sport.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap-grid.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-    <script src="./public/js/jquery.serialize-object.min.js"></script>
+    <script src="/js/jquery.serialize-object.min.js"></script>
 </head>
 
 <body>
@@ -32,10 +32,12 @@
                         <div class="form-group label--floating"><input type="email" name="email"><label>이메일(아이디)</label>
                         </div>
                         <div class="form-group label--floating with-addon addon--right"><span> <i
-                                class="fa fa-eye-slash"></i></span><input type="password" name="password"><label>비밀번호(8~16글자, 특수문자, 영문자 포함)</label>
+                                class="fa fa-eye-slash"></i></span><input type="password" name="password"><label>비밀번호(8~16글자,
+                            특수문자, 영문자 포함)</label>
                         </div>
                         <div class="form-group label--floating with-addon addon--right"><span> <i
-                                class="fa fa-eye-slash"></i></span><input type="password" name="password_check"><label>비밀번호 확인</label></div>
+                                class="fa fa-eye-slash"></i></span><input type="password" name="password_check"><label>비밀번호
+                            확인</label></div>
                         <div class="form-group">
                             <div class="form-checkbox"><label>
                                 <div class="pgn-checkbox">
@@ -47,12 +49,12 @@
                     <button class="btn btn-md btn-primary btn-block mb-2" onclick="new Register()">가입하기</button>
                 </div>
             </div>
-            <span class="d-block mt-4 helper-text text--center"><a class="ml-1" href="index.html">로그인 페이지로</a></span>
+            <span class="d-block mt-4 helper-text text--center"><a class="ml-1" href="./">로그인 페이지로</a></span>
         </div>
     </div>
 </div>
-<script src="./public/js/main.js"></script>
-<script src="./public/js/script.js"></script>
+<script src="/js/main.js"></script>
+<script src="/js/script.js"></script>
 </body>
 
 </html>
