access-token 버그 수정, http status 수정

--- a/ui/html/navigation.html
+++ b/ui/html/navigation.html
@@ -17,7 +17,7 @@
 <body>
 
 <div class="sidebar-header"><a href="#">
-    <img src="/image/intro_icon.png" style="max-width: 80%; height: auto;">
+    <img src="../public/image/intro_icon.png" style="max-width: 80%; height: auto;">
 </a>
     <div class="sidebar-control"><i class="la la-navicon"></i></div>
 </div>
