--- a/ui/html/index.html
+++ b/ui/html/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Roboto">
     <link rel="stylesheet" href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/sport.css" type="text/css">
+    <link rel="stylesheet" href="./public/css/sport.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap-grid.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
 </head>
@@ -21,7 +21,7 @@
             <h4 class="color--primary text--center">REDTEAM 악성메일 모의훈련</h4>
             <div class="box">
                 <div class="box-header">
-                    <img src="/image/big_icon.png" alt="REDTEAM_logo" style="max-width: 100%; height: auto;">
+                    <img src="./public/image/big_icon.png" alt="REDTEAM_logo" style="max-width: 100%; height: auto;">
                 </div>
                 <div class="box-body">
                     <form action="" id="login_form">
@@ -34,14 +34,14 @@
                 </div>
             </div>
             <span class="d-block mt-4 helper-text text--center">회원이 아니신가요? <a class="ml-1"
-                                                                              href="./register">회원가입하기</a></span>
+                                                                              href="./register.html">회원가입하기</a></span>
         </div>
     </div>
 </div>
-<script src="/js/main.js"></script>
-<script src="/js/script.js"></script>
+<script src="./public/js/main.js"></script>
+<script src="./public/js/script.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-<script src="/js/jquery.serialize-object.min.js"></script>
+<script src="./public/js/jquery.serialize-object.min.js"></script>
 <script>
     $("#login_form").keypress(function (e) {
         if (e.keyCode === 13) {
