--- a/ui/html/navigation.html
+++ b/ui/html/navigation.html
@@ -16,82 +16,82 @@
 </head>
 <body>
 
-<div class="sidebar-header"><a href="#">
-    <img src="/image/intro_icon.png" style="max-width: 80%; height: auto;">
-</a>
-    <div class="sidebar-control"><i class="la la-navicon"></i></div>
-</div>
-<div class="sidebar-wrapper">
-    <ul class="list-menu">
-        <li class="header">Total Info</li>
-        <li class="has-children active"><a href="javascript:;"><i
-                class="la la-dashboard"></i><span>대시보드</span>
-            <div class="right-container"><i class="la la-chevron-down tree-icon"></i></div>
-        </a>
-            <ul class="tree">
-                <!--   전체적인 진황 현황 등 그래프와 진행 상태 표현             -->
-                <li class="tree-item"><a href="./dashboard/main.html"><i
-                        class="la la-circle"></i><span style="font-size:0.8em;">전체진행현황</span></a></li>
-                <!--   프로젝트 별 진행 상태 및 설정 현황 표현             -->
-                <li class="tree-item"><a href="./dashboard/project-detail.html"><i class="la la-circle"></i><span
-                        style="font-size:0.8em;">프로젝트상세</span></a>
-                </li>
-            </ul>
-        </li>
-        <li class="header">Project Info</li>
-        <li class="has-children"><a href="javascript:;"><i class="la la-laptop"></i><span>프로젝트 진행현황</span>
-            <div class="right-container"><i class="la la-chevron-right tree-icon"></i></div>
-        </a>
-            <ul class="tree">
-                <li class="tree-item"><a href="../base/colors.html"><i
-                        class="la la-circle"></i><span style="font-size:0.8em;">진행 프로젝트</span></a></li>
-                <li class="tree-item"><a href="../base/icons.html"><i
-                        class="la la-circle"></i><span style="font-size:0.8em;">완료 프로젝트</span></a></li>
-                <li class="tree-item"><a href="../base/buttons.html"><i
-                        class="la la-circle"></i><span style="font-size:0.8em;">예약 프로젝트</span></a></li>
-            </ul>
-        </li>
-        <li class="tree-item"><a href="javascript:;"><i class="la la-group"></i><span>대상관리</span>
-            <div class="right-container"></div>
-        </a>
 
-        </li>
-        <li class="tree-item"><a href="javascript:;"><i class="la la-file-text"></i><span>템플릿관리</span>
-            <div class="right-container"></div>
-        </a>
-        </li>
-        <li class="tree-item"><a href="javascript:;"><i class="la la-pencil-square"></i><span>프로젝트 생성</span>
-            <div class="right-container"></div>
-        </a>
-        </li>
-        <li class="header">Setting</li>
-        <li class="has-children"><a href="javascript:;"><i class="la la-cog"></i><span>설정</span>
-            <div class="right-container"><i class="la la-chevron-right tree-icon"></i></div>
-        </a>
-            <ul class="tree">
-                <li class="tree-item"><a href="./setting/person-setting.html"><i
-                        class="la la-circle"></i><span style="font-size:0.8em;">사용자 정보</span></a></li>
-                <li class="tree-item"><a href="../pages/register.html"><i
-                        class="la la-circle"></i><span style="font-size:0.8em;">SMTP 설정</span></a></li>
-            </ul>
-        </li>
-    </ul>
+<div class="sidebar">
+    <div class="sidebar-header"><a href="#">
+        <img src="/image/intro_icon.png" style="max-width: 80%; height: auto;">
+    </a>
+        <div class="sidebar-control"><i class="la la-navicon"></i></div>
+    </div>
+    <div class="sidebar-wrapper">
+        <ul class="list-menu">
+            <li class="header">Total Info</li>
+            <li class="has-children"><a href="javascript:;"><i
+                    class="la la-dashboard"></i><span>대시보드</span>
+                <div class="right-container"><i class="la la-chevron-down tree-icon"></i></div>
+            </a>
+                <ul class="tree">
+                    <!--   전체적인 진황 현황 등 그래프와 진행 상태 표현             -->
+                    <li class="tree-item"><a href="/dashboard/total"><i
+                            class="la la-circle"></i><span style="font-size:0.8em;">전체진행현황</span></a></li>
+                    <!--   프로젝트 별 진행 상태 및 설정 현황 표현             -->
+                    <li class="tree-item"><a href="/dashboard/detail"><i
+                            class="la la-circle"></i><span
+                            style="font-size:0.8em;">프로젝트상세</span></a>
+                    </li>
+                </ul>
+            </li>
+            <li class="header">Project Info</li>
+            <li class="has-children"><a href="javascript:;"><i class="la la-laptop"></i><span>프로젝트 진행현황</span>
+                <div class="right-container"><i class="la la-chevron-right tree-icon"></i></div>
+            </a>
+                <ul class="tree">
+                    <li class="tree-item"><a href="/project/ing"><i
+                            class="la la-circle"></i><span style="font-size:0.8em;">진행 프로젝트</span></a></li>
+                    <li class="tree-item"><a href="/project/complete"><i
+                            class="la la-circle"></i><span style="font-size:0.8em;">완료 프로젝트</span></a></li>
+                    <li class="tree-item"><a href="/project/book"><i
+                            class="la la-circle"></i><span style="font-size:0.8em;">예약 프로젝트</span></a></li>
+                </ul>
+            </li>
+            <li class="tree-item"><a href="/manager/target"><i class="la la-group"></i><span>대상관리</span>
+                <div class="right-container"></div>
+            </a>
+
+            </li>
+            <li class="tree-item active"><a href="/manager/template"><i
+                    class="la la-file-text"></i><span>템플릿관리</span>
+                <div class="right-container"></div>
+            </a>
+            </li>
+            <li class="tree-item"><a href="/project/create"><i
+                    class="la la-pencil-square"></i><span>프로젝트 생성</span>
+                <div class="right-container"></div>
+            </a>
+            </li>
+            <li class="header">Setting</li>
+            <li class="has-children"><a href="javascript:;"><i class="la la-cog"></i><span>설정</span>
+                <div class="right-container"><i class="la la-chevron-right tree-icon"></i></div>
+            </a>
+                <ul class="tree">
+                    <li class="tree-item"><a href="/setting/user"><i
+                            class="la la-circle"></i><span style="font-size:0.8em;">사용자 정보</span></a></li>
+                    <li class="tree-item"><a href="/setting/smtp"><i
+                            class="la la-circle"></i><span style="font-size:0.8em;">SMTP 설정</span></a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 </div>
 
 
 </body>
+
+<script src="/js/script.js"></script>
+<script src="/js/demo.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-<script src="./public/js/jquery.serialize-object.min.js"></script>
-<script src="./public/js/main.js"></script>
-<script src="./public/js/demo.js"></script>
-<script src="./public/js/script.js"></script>
-<script>
-    function click(){
-        console.log("this.name11")
-        // $(this).addClass("active")
-    }
+<script src="/js/jquery.serialize-object.min.js"></script>
+<script src="/js/lib/Sortable.min.js"></script>
+<script src="/js/main.js"></script>
 
-
-
-</script>
 </html>
