#42 | 프로젝트 현황 페이지 네비게이션 적용

--- a/ui/html/setting/smtp-setting.html
+++ b/ui/html/setting/smtp-setting.html
@@ -41,18 +41,9 @@
                 </ul>
             </li>
             <li class="header">Project Info</li>
-            <li class="has-children"><a href="javascript:;"><i class="la la-laptop"></i><span>프로젝트 진행현황</span>
-                <div class="right-container"><i class="la la-chevron-right tree-icon"></i></div>
+            <li class="tree-item"><a href="/project/progress"><i class="la la-group"></i><span>프로젝트 진행 현황</span>
+                <div class="right-container"></div>
             </a>
-                <ul class="tree">
-                    <li class="tree-item"><a href="/project/ing"><i
-                            class="la la-circle"></i><span style="font-size:0.8em;">진행 프로젝트</span></a></li>
-                    <li class="tree-item"><a href="/project/complete"><i
-                            class="la la-circle"></i><span style="font-size:0.8em;">완료 프로젝트</span></a></li>
-                    <li class="tree-item"><a href="/project/book"><i
-                            class="la la-circle"></i><span style="font-size:0.8em;">예약 프로젝트</span></a></li>
-                </ul>
-            </li>
             <li class="tree-item"><a href="/manager/target"><i class="la la-group"></i><span>대상관리</span>
                 <div class="right-container"></div>
             </a>
