--- a/ui/html/project/project.html
+++ b/ui/html/project/project.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="theme-color" content="#FFFFFF">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
-  <title>REDTEAM | 완료 프로젝트</title>
+  <title>REDTEAM | 예약 프로젝트</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Roboto">
   <link rel="stylesheet" href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css">
   <link rel="stylesheet" href="/css/sport.min.css" type="text/css">
@@ -40,17 +40,10 @@
         </ul>
       </li>
       <li class="header">Project Info</li>
-      <li class="has-children active"><a href="javascript:;"><i class="la la-laptop"></i><span>프로젝트 진행현황</span>
-        <div class="right-container"><i class="la la-chevron-right tree-icon"></i></div>
+      <li class="tree-item active"><a href="/project/progress"><i class="la la-group"></i><span>프로젝트 진행 현황</span>
+        <div class="right-container"></div>
       </a>
-        <ul class="tree">
-          <li class="tree-item"><a href="/project/ing"><i
-                  class="la la-circle"></i><span style="font-size:0.8em;">진행 프로젝트</span></a></li>
-          <li class="tree-item"><a class="active" href="/project/complete"><i
-                  class="la la-circle"></i><span style="font-size:0.8em;">완료 프로젝트</span></a></li>
-          <li class="tree-item"><a href="/project/book"><i
-                  class="la la-circle"></i><span style="font-size:0.8em;">예약 프로젝트</span></a></li>
-        </ul>
+
       </li>
       <li class="tree-item"><a href="/manager/target"><i class="la la-group"></i><span>대상관리</span>
         <div class="right-container"></div>
@@ -84,8 +77,8 @@
   <div class="main-content">
     <div class="header">
       <div class="left">
-        <p>완료 프로젝트</p>
-        <div class="breadcrumb"><span>프로젝트 진행현황</span><span>완료 프로젝트</span></div>
+        <p>프로젝트 진행현황</p>
+        <div class="breadcrumb"><span>프로젝트 진행현황</span></div>
       </div>
       <ul class="right">
         <li class="header-user dropdown ml-4 mr-3"><a class="user-photo trigger-dropdown"><img class="user-img"
@@ -526,7 +519,6 @@
       <div class="footer"><span><b>Pugna</b> - Admin Template by <a href="https://github.com/aljazari-studio/pugna" target="_blank">Al Jazari Studio</a></span></div>
     </div>
   </div>
-
   <script src="/js/lib/Sortable.min.js"></script>
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
   <script src="/js/jquery.serialize-object.min.js"></script>
