#70 | 대시보드, 프로젝트 관리 페이지 추가

--- a/ui/html/navigation.html
+++ b/ui/html/navigation.html
@@ -42,7 +42,7 @@
                 </ul>
             </li>
             <li class="header">Project Info</li>
-            <li class="has-children"><a href="javascript:;"><i class="la la-laptop"></i><span>프로젝트 진행현황</span>
+            <li class="has-children"><a href="javascript:;"><i class="la la-laptop"></i><span>프로젝트 관리</span>
                 <div class="right-container"><i class="la la-chevron-right tree-icon"></i></div>
             </a>
                 <ul class="tree">
